重构录像模块，新增录像配置和录像计划。
